fix : nav gap fixed in the corner

--- a/css-files/landing-page.css
+++ b/css-files/landing-page.css
@@ -82,7 +82,7 @@
 
 .nav-bottom-icons {
     padding: 0;
-    margin-left: 3rem;
+    margin-left: max(3rem,5rem);
     font-size: 2rem;
 }
 
